--- a/linkedin clone/src/output.css
+++ b/linkedin clone/src/output.css
@@ -641,10 +641,6 @@ video {
   margin-top: 1rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -685,16 +681,12 @@ video {
   width: 25%;
 }
 
-.w-1\/5 {
-  width: 20%;
-}
-
-.w-10\/12 {
-  width: 83.333333%;
-}
-
 .w-11\/12 {
   width: 91.666667%;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-4 {
@@ -705,8 +697,20 @@ video {
   width: 1.25rem;
 }
 
+.w-56 {
+  width: 14rem;
+}
+
 .w-6 {
   width: 1.5rem;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-\[14px\] {
@@ -726,28 +730,8 @@ video {
   width: 1px;
 }
 
-.w-56 {
-  width: 14rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-72 {
-  width: 18rem;
+.w-\[555px\] {
+  width: 555px;
 }
 
 .cursor-pointer {
@@ -846,11 +830,6 @@ video {
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .p-0 {
@@ -953,20 +932,12 @@ video {
   padding-right: 0.25rem;
 }
 
-.pr-16 {
-  padding-right: 4rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
-}
-
 .pr-2 {
   padding-right: 0.5rem;
 }
 
-.pl-8 {
-  padding-left: 2rem;
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .text-center {
@@ -1080,12 +1051,16 @@ video {
     display: none;
   }
 
+  .max-lg\:w-3\/5 {
+    width: 60%;
+  }
+
   .max-lg\:w-auto {
     width: auto;
   }
 
-  .max-lg\:w-3\/5 {
-    width: 60%;
+  .max-lg\:w-96 {
+    width: 24rem;
   }
 
   .max-lg\:justify-around {
@@ -1095,10 +1070,6 @@ video {
   .max-lg\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
-  }
-
-  .max-lg\:pl-1 {
-    padding-left: 0.25rem;
   }
 }
 
@@ -1118,11 +1089,6 @@ video {
     margin-right: 1px;
   }
 
-  .max-sm\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .max-sm\:mb-3 {
     margin-bottom: 0.75rem;
   }
@@ -1135,21 +1101,13 @@ video {
     height: 6rem;
   }
 
-  .max-sm\:w-auto {
-    width: auto;
-  }
-
-  .max-sm\:w-full {
-    width: 100%;
-  }
-
   .max-sm\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
   }
 
-  .max-sm\:w-11\/12 {
-    width: 91.666667%;
+  .max-sm\:w-full {
+    width: 100%;
   }
 
   .max-sm\:flex-col {
@@ -1159,25 +1117,5 @@ video {
   .max-sm\:object-cover {
     -o-object-fit: cover;
        object-fit: cover;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:hidden {
-    display: none;
-  }
-
-  .lg\:w-96 {
-    width: 24rem;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:w-80 {
-    width: 20rem;
-  }
-
-  .xl\:w-96 {
-    width: 24rem;
   }
 }
